@@ -120,6 +120,7 @@
             <properties>
                 <surefire.test.jvm.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                     --add-exports=java.base/sun.net.util=ALL-UNNAMED
+                    --add-exports=java.base/sun.util.calendar=ALL-UNNAMED
                     --add-opens=java.base/java.lang=ALL-UNNAMED
                     --add-opens=java.base/java.util=ALL-UNNAMED</surefire.test.jvm.args>
             </properties>
